# takaki-works-hub

./: KantoNatuRobo.SLDASM  README.md  weldingMachine.SLDASM  角パイプ仕分け機.SLDASM
.VSCodeCounter/2025-06-08_21-28-26/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-06-08_21-33-20/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-06-08_21-38-57/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
AiRobot/: 10053gaerRack.SLDPRT  arm.SLDASM  lidarBase.STL
AnormallyDetect/python/: AutoEncoder1.py  AutoEncoder2.py  Detect_AE.py  Detect_PCA.py  Encoder.py  PCA1.py  PCA2.py  Preprocess1.py  mvtest.py  mvtest2.py  preprocess2.py  supertest.py
AnormallyDetect/書類/: 東京工業大学情報理工学院総合型選抜活動実績報告書.docx  活動実績報告書.docx  活動実績報告書のコピー.docx
IndependSteering/: sweave.SLDASM  swerveBearCase.STL  swerveGear1.STL  swerveGear2.STL  swerveMotorCase.STL  swerveRailbase.STL  swerveSlipringBase.STL  swerveStriker.STL  独ステ２.SLDASM
IndependSteering/photo_interrupter/: photo_interrupter.kicad_prl  photo_interrupter.kicad_pro  photo_interrupter.kicad_sch  photo_interrupter.step
KantoNatu2023/: KantoNatuRobo.SLDASM  multifunction.ino
KantoNatu2023/kantonatsurobo2023_omni-main/: kantonatsurobo2023_omni.ino
NHK2024/4-omni/: 4-omni.ino  OmniRobotController.cpp  OmniRobotController.h
NHK2024/4-omni/example/: OmniRobotController.cpp  OmniRobotController.h  example.ino  rad_pid.cpp
NHK2024/4-omni/example/LCDtest/: LCDtest.ino
NHK2024/NHK_R1/: NHK_R1.ino  README.md  rad_pid.h
NHK2024/NHK_rad_pid/: NHK_rad_pid.ino  PID.cpp
NHK2024/NHK_rpm_pid/: NHK_rpm_pid.ino  README.md  motor.cpp  omni2
NHK2024/gakurobo-ws-master/: .gitignore  .gitmodules  README.md
NHK2024/gakurobo-ws-master/src/ball_camera/: README.md  package.xml  setup.cfg  setup.py
NHK2024/gakurobo-ws-master/src/ball_camera/ball_camera/: detector.py
NHK2024/gakurobo-ws-master/src/ball_camera/config/: params.yaml
NHK2024/gakurobo-ws-master/src/ball_camera/launch/: ball_camera.launch.py
NHK2024/gakurobo-ws-master/src/ball_camera/models/: README.md
NHK2024/gakurobo-ws-master/src/ball_camera_msgs/: CMakeLists.txt  package.xml
NHK2024/gakurobo-ws-master/src/ball_camera_msgs/msg/: Ball.msg  Balls.msg
NHK2024/gakurobo-ws-master/src/detector/: CMakeLists.txt  package.xml
NHK2024/gakurobo-ws-master/src/detector/config/: params.yaml
NHK2024/gakurobo-ws-master/src/detector/include/detector/: clusterer.h  detector.h  filter.h  visualizer.h
NHK2024/gakurobo-ws-master/src/detector/src/: clusterer.cpp  detector.cpp  filter.cpp  visualizer.cpp
NHK2024/gakurobo-ws-master/src/detector/src/nodes/: detector_node.cpp  filter_node.cpp  visualizer_node.cpp
NHK2024/gakurobo-ws-master/src/launch_bundle/: CMakeLists.txt  package.xml
NHK2024/gakurobo-ws-master/src/launch_bundle/config/: ball_camera.yaml  detector.yaml  merger.yaml
NHK2024/gakurobo-ws-master/src/launch_bundle/launch/: obstacles_detection.launch.yaml
NHK2024/gakurobo-ws-master/src/lidar_controller/: package.xml  setup.cfg  setup.py
NHK2024/gakurobo-ws-master/src/merger/: CMakeLists.txt  LICENSE  package.xml
NHK2024/gakurobo-ws-master/src/merger/config/: params.yaml
NHK2024/gakurobo-ws-master/src/merger/include/merger/: merger.h
NHK2024/gakurobo-ws-master/src/merger/src/: merger.cpp
NHK2024/gakurobo-ws-master/src/obstacle_msgs/: CMakeLists.txt  package.xml
NHK2024/gakurobo-ws-master/src/serial_bridge/: CMakeLists.txt  package.xml
NHK2024/gakurobo-ws-master/src/serial_bridge/arduino/: arduino.ino
NHK2024/gakurobo-ws-master/src/serial_bridge/include/serial_bridge/: bridge.h
NHK2024/gakurobo-ws-master/src/serial_bridge/src/: bridge.cpp
Robocup rescue 2017/: S_UMX.h  testM.c
Robocup rescue 2017/drivers/: lego-light.h  lego-touch.h
RobocupRescue2017/: Mh.c  test_trace.c
RobocupRescue2017/drivers/: hitechnic-eopd.h
Training/BunaiRobocon/: Part5.SLDPRT  board_holder_75_no_through v2.SLDPRT  board_rail_75_4_under v7.SLDPRT  bunai.SLDASM  dualsense4can.py  gear1.SLDPRT  gear2.SLDPRT  フィールド.SLDASM  ルール.md
Training/Intro/: README.md  intro_robot.SLDASM  部品リスト.xlsx
Training/Intro/main/: main.ino
WRO2017/: Sab.h  run2017.c.docx
WRO2017/Lego-20250607T115704Z-1-001/Lego/: honban3.c  run2017.c
WRO2017/Lego-20250607T115704Z-1-001/Lego/robocup 2017/: 2017_main3.c  Mc.c  cps_test.c  library.h  test.c  test_sub.h
WRO2017/Lego-20250607T115704Z-1-001/Lego/プレゼン資料/: タービン_フローチャート.xlsx  タービン_フローチャート2.xlsx  プレゼン資料.pptx  プレゼン資料gtkt.pptx  プレゼン資料gtkt2.pptx  プレゼン資料gtktイエエイ.pptx  プレゼン資料卍.pptx  プレゼン資料卍Rem卍.pptx
WRO2017/Lego-20250607T115704Z-1-001/Lego/無題のフォルダ/: 3. Merkabah.pptx  Main.c  Sub.h  Sub_0309.N.h
WRO2017/WRO2017/: S_UMX.h  i2c.h
independent_steering/: fp-info-cache  independent_steering-B_Cu.gbr  independent_steering-B_Mask.gbr  independent_steering-B_Paste.gbr  independent_steering-B_Silkscreen.gbr  independent_steering-Edge_Cuts.gbr  independent_steering-F_Cu.gbr  independent_steering-F_Mask.gbr  independent_steering-F_Paste.gbr  independent_steering-F_Silkscreen.gbr  independent_steering-job.gbrjob  independent_steering.kicad_pcb  independent_steering.kicad_prl  independent_steering.kicad_pro
independent_steering/gaba/: independent_steering-NPTH-drl_map.gbr  independent_steering-NPTH.drl  independent_steering-PTH-drl_map.gbr  independent_steering-PTH.drl
(+7 files in other folders)
